# AI-Agent

./: README.md  pyproject.toml
advanced_agent/: .gitignore  main.py  pyproject.toml  server.py
advanced_agent/src/: agent_postprocessor.py  firecrawl.py  format_text.py  save_utils.py  tools.py
advanced_agent/src/api/: app.py  translate.py
advanced_agent/src/api/routes/: chat.py  suggestions.py
advanced_agent/src/topics/: registry.py  root_workflow.py
advanced_agent/static/: chat-ui.ts  configs.ts  styles.css  types.ts
advanced_agent/static_build/: chat-ui.d.ts.map  chat-ui.js  chat-ui.js.map  configs.js  configs.js.map  constants.d.ts  constants.d.ts.map  constants.js  constants.js.map  main_old.d.ts.map  main_old.js  main_old.js.map  types.d.ts  types.d.ts.map  types.js.map
legacy/: main_old.ts  server_orig.py
legacy/software_engineering_old/: __init__.py  base_models.py  base_prompts.py  base_workflow.py
legacy/software_engineering_old/architecture_design/: __init__.py  models.py  prompts.py  workflow.py
legacy/software_engineering_old/code_quality/: __init__.py  models.py  prompts.py  workflow.py
legacy/software_engineering_old/code_review/: __init__.py  models.py  prompts.py  workflow.py
legacy/software_engineering_old/productivity/: __init__.py  models.py  prompts.py  workflow.py
legacy/software_engineering_old/project_management/: __init__.py  models.py  prompts.py  workflow.py
legacy/software_engineering_old/testing/: __init__.py  models.py  prompts.py  workflow.py
simple_agent/: main.py  pyproject.toml
(+18 files in other folders)
