[project]
name = "simple-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "firecrawl-py>=4.8.0",
    "langchain>=1.0.5",
    "langchain-mcp-adapters>=0.1.13",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.3",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
]
